--- a/public/main.scss
+++ b/public/main.scss
@@ -1,8 +1,13 @@
 body {
+  margin: 0;
+  padding: 0;
+}
+
+.page-layout {
   display: flex;
   flex-flow: column;
-  flex-wrap: wrap;
   align-items: center;
+  justify-content: space-between;
   height: 100vh;
   margin: 0;
 }
@@ -17,16 +22,16 @@ body {
 .main {
   display: flex;
   width: 100%;
-  overflow: scroll;
-  max-height: 530px;
+  overflow: auto;
   justify-content: center;
   flex-flow: column;
   align-items: center;
+  flex-grow: 1;
 }
 
 .footer {
   width: 100%;
-  margin-top: auto;
+  // margin-top: auto;
   text-align: center;
   background: #61d3d1;
   padding: 20px 0px;
@@ -46,8 +51,8 @@ body {
   color: #fff;
   font-size: 12px;
   font-weight: bold;
-  background: #8E49E8;
-  border: 1px solid #8E49E8;
+  background: #8e49e8;
+  border: 1px solid #8e49e8;
   cursor: pointer;
   padding-bottom: 8px;
   padding-top: 8px;
