--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,6 +1,101 @@
+$color1: #61d3d1;
+
 body {
   margin: 0;
   padding: 0;
+}
+
+.pageLayout {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  margin: 0;
+}
+
+.header {
+  width: 100%;
+  text-align: center;
+  background: $color1;
+  margin-bottom: 15px;
+}
+
+.main {
+  display: flex;
+  width: 100%;
+  overflow: auto;
+  justify-content: flex-start;
+  flex-flow: column;
+  align-items: center;
+  flex-grow: 1;
+  font-size: 19px;
+}
+
+.footer {
+  width: 100%;
+  text-align: center;
+  background: $color1;
+  padding: 20px 0px;
+}
+
+input {
+  .movieInputField {
+    border-radius: 3px;
+  }
+}
+
+.searchMovie {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 3px;
+  .movieInputField {
+    flex: 2;
+  }
+  .yearInputField {
+    text-align: center;
+    flex: 1;
+  }
+  .searchMoviesButton {
+    width: 50%;
+    margin-top: 5px;
+    flex: 1 auto;
+    background-color: $color1;
+    font-weight: bold;
+    padding: 5px;
+  }
+}
+
+.moviesList {
+  display: flex;
+  flex-flow: column;
+  align-items: center;  
+  justify-content: center;
+  margin-top: 10px;
+
+  .searchResult {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .moviePoster {
+    width: 70%; 
+  }
+
+  .movieTitle {
+    font-weight: bold;
+  }
+
+  .movieInfo {
+    width: 64%;
+    text-align: justify;
+    border: 1px solid #808080;
+    margin: 5px;
+    padding: 3%;
+  }
 }
 
 @import url("./responsive/responsive.scss");
