--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -75,6 +75,7 @@ input {
 
   .searchResult {
     display: flex;
+    align-self: flex-start;
     flex-direction: column;
     justify-content: center;
     align-items: center;
